--- a/css/ab.css
+++ b/css/ab.css
@@ -14,7 +14,7 @@ header{
     width: 100%;
     position: relative;
     height:100vh; 
-    background: url('D:/portfolio/images1/sink.jpg') no-repeat;
+    background: url('C:/Users/Pahadi Rawat/Documents/GitHub/sir-portfolio/images1/no.jpg') no-repeat;
     background-size:100%;
     background-position:center;
     clip-path: polygon(50% 0%, 100% 0, 100% 75%, 50% 100%, 0% 75%, 0 0);
@@ -154,7 +154,7 @@ nav a:hover{
 }
 #skills{
     padding: 100px 50px;
-    background: url('C:/Users/Pahadi Rawat/Desktop/mansi/images/2.0.jpg');
+    background: url('C:/Users/Pahadi Rawat/Documents/GitHub/sir-portfolio/images1/R (1).jpg');
     background-size:cover;
     color: #fff;
 }
