--- a/css/ab.css
+++ b/css/ab.css
@@ -15,6 +15,7 @@ header{
     position: relative;
     height:100vh; 
     background-size:100%;
+    background: no-repeat;
     background-position:center;
     clip-path: polygon(50% 0%, 100% 0, 100% 75%, 50% 100%, 0% 75%, 0 0);
 }
@@ -155,6 +156,7 @@ nav a:hover{
 #skills{
     padding: 100px 50px;
     background-size:cover;
+    background: no-repeat;
     color: #fff;
 }
 .skille-ri{
@@ -344,7 +346,14 @@ background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
     font-weight: bold;
     text-shadow: 2px 2px 3px white;
 }
-
+@media (max-width: 500px){
+    nav ul a{
+        display:block;
+        align-items: center;
+        text-align: center;
+      
+    }
+}
 
 @media (max-width: 300px){
     .wrapper .icon{
@@ -362,10 +371,6 @@ background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
       
     }
 }
-@media (max-width: 300px){
-    nav ul a{
-        display:block;
-    }
-}
+
 
 
